--- a/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/1.md
+++ b/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/1.md
@@ -7,3 +7,5 @@ Este curso está diseñado para introducir los principios básicos del aprendiza
 
 ## Estructura del Curso
 El curso se desarrolla en un periodo de **2 semanas** y está diseñado para un nivel **principiante**. Se divide en **tres unidades** fundamentales:
+
+# Quiz
