--- a/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/3.md
+++ b/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/3.md
@@ -4,3 +4,21 @@
 - Diferenciar entre los diversos enfoques conductuales en la práctica psicológica.
 
 Este curso proporciona una base sólida para el estudio de la conducta y su aplicación en el ámbito clínico, favoreciendo el desarrollo de habilidades para el análisis y modificación del comportamiento.
+
+
+### Unidad 1: Fundamentos del Aprendizaje y Conductismo
+- Definición y principios básicos del conductismo.
+- Diferencias entre aprendizaje clásico y operante.
+- Introducción al análisis funcional de la conducta.
+
+### Unidad 2: Análisis Funcional del Comportamiento
+- Concepto de refuerzo y castigo.
+- El papel del lenguaje en la modificación de la conducta.
+- Aplicaciones clínicas del análisis funcional.
+
+### Unidad 3: Aplicaciones Prácticas y Casos de Estudio
+- Estrategias de intervención basadas en el aprendizaje.
+- Evaluación de casos prácticos.
+- Comparación entre diferentes enfoques conductuales.
+
+# Quiz
