--- a/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/2.md
+++ b/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/2.md
@@ -1,17 +1,23 @@
 
-### Unidad 1: Fundamentos del Aprendizaje y Conductismo
-- Definición y principios básicos del conductismo.
-- Diferencias entre aprendizaje clásico y operante.
-- Introducción al análisis funcional de la conducta.
+## Lección 2: Fundamentos del Condicionamiento Operante
 
-### Unidad 2: Análisis Funcional del Comportamiento
-- Concepto de refuerzo y castigo.
-- El papel del lenguaje en la modificación de la conducta.
-- Aplicaciones clínicas del análisis funcional.
+Esta lección se centra en el Condicionamiento Operante, donde el aprendizaje es un proceso de "prueba y error" en el que la probabilidad de que una conducta se repita depende de las **consecuencias** que le siguen. Esta teoría fue desarrollada por **B. F. Skinner**, basándose en los trabajos de Edward Thorndike sobre la **Ley del Efecto**.
 
-### Unidad 3: Aplicaciones Prácticas y Casos de Estudio
-- Estrategias de intervención basadas en el aprendizaje.
-- Evaluación de casos prácticos.
-- Comparación entre diferentes enfoques conductuales.
+### Ley del Efecto de Thorndike
+Thorndike postuló que las respuestas que producen una consecuencia satisfactoria tienen más probabilidades de repetirse, mientras que las respuestas que producen una consecuencia insatisfactoria tienen menos probabilidades. Su famoso experimento con "cajas problema" para gatos demostró que los animales aprendían a escapar al asociar la acción (presionar una palanca) con la consecuencia deseada (abrirse la puerta y obtener comida).
 
-# Quiz
+### Elementos Clave del Condicionamiento Operante
+
+* **Reforzamiento:** Cualquier evento o estímulo que, cuando sigue a una conducta, aumenta la probabilidad de que esa conducta se repita.
+    * **Reforzamiento Positivo:** La adición de un estímulo agradable o deseado. Por ejemplo, dar un elogio a un estudiante por participar en clase.
+    * **Reforzamiento Negativo:** La eliminación de un estímulo desagradable o aversivo. Por ejemplo, un niño que hace la tarea para evitar que sus padres lo regañen.
+* **Castigo:** Cualquier evento o estímulo que, cuando sigue a una conducta, disminuye la probabilidad de que esa conducta se repita.
+    * **Castigo Positivo:** La adición de un estímulo aversivo. Por ejemplo, poner una multa por exceso de velocidad.
+    * **Castigo Negativo:** La eliminación de un estímulo agradable. Por ejemplo, quitarle el celular a un adolescente por no hacer sus labores.
+
+### Tipos de Reforzadores y Programas de Reforzamiento
+* **Reforzadores Primarios:** Satisfacen necesidades biológicas básicas (ej. comida, agua).
+* **Reforzadores Secundarios:** Adquieren su valor a través de la asociación con reforzadores primarios (ej. dinero, elogios).
+* **Programas de Reforzamiento:** Describen cuándo y cómo se administra el reforzamiento.
+    * **Reforzamiento Continuo:** El reforzamiento se da cada vez que se produce la conducta deseada. Ideal para el aprendizaje inicial.
+    * **Reforzamiento Intermitente (o Parcial):** El reforzamiento no se da cada vez que se produce la conducta. Esto produce una conducta más resistente a la extinción. Los programas intermitentes pueden ser de **razón** (basados en el número de respuestas, ej. un premio cada 10 respuestas correctas) o de **intervalo** (basados en el tiempo transcurrido, ej. un premio cada 5 minutos).
