--- a/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/1.md
+++ b/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/1.md
@@ -1,11 +1,21 @@
-# Presentación del Curso: Principios Básicos del Aprendizaje
+## Lección 1: Fundamentos del Condicionamiento Clásico
 
-## Introducción
-El **análisis de la conducta clínica**, desarrollado en los años noventa, es un enfoque basado en el conductismo que se centra en clientes verbalmente competentes. A diferencia de la terapia cognitivo-conductual, este enfoque se distingue por su metodología contextual y funcional, enfatizando la relación entre el lenguaje y la conducta.
+Esta lección profundiza en el Condicionamiento Clásico, el tipo de aprendizaje asociativo donde un organismo asocia dos estímulos. Fue descubierto por el fisiólogo ruso **Iván Pávlov** durante sus estudios sobre la digestión en perros, observando que los animales salivaban ante estímulos que, en principio, no tenían relación con la comida.
 
-Este curso está diseñado para introducir los principios básicos del aprendizaje desde una perspectiva conductual, facilitando la comprensión de los procesos que subyacen al comportamiento humano.
+### Elementos Clave del Condicionamiento Clásico
 
-## Estructura del Curso
-El curso se desarrolla en un periodo de **2 semanas** y está diseñado para un nivel **principiante**. Se divide en **tres unidades** fundamentales:
+* **Estímulo Incondicionado (EI):** Un estímulo que provoca una respuesta de forma natural y automática, sin aprendizaje previo. Por ejemplo, el alimento que causa salivación en un perro, o un ruido fuerte que provoca sobresalto en una persona.
+* **Respuesta Incondicionada (RI):** La respuesta natural y no aprendida que se produce ante el estímulo incondicionado. La salivación del perro o el sobresalto de la persona son respuestas incondicionadas.
+* **Estímulo Neutro (EN):** Un estímulo que, antes del condicionamiento, no provoca ninguna respuesta relacionada con la que se busca condicionar. Una campana, una luz o un metrónomo son ejemplos de estímulos neutros.
+* **Estímulo Condicionado (EC):** Lo que era un estímulo neutro se convierte en un estímulo condicionado después de ser asociado repetidamente con el estímulo incondicionado. El sonido de la campana, tras su asociación con la comida, se convierte en un estímulo condicionado.
+* **Respuesta Condicionada (RC):** La respuesta aprendida que se produce ante el estímulo condicionado. Es la misma respuesta que la incondicionada, pero ahora desencadenada por el estímulo condicionado.
 
-# Quiz
+### Fenómenos Clave del Condicionamiento Clásico
+
+* **Adquisición:** El proceso inicial de aprendizaje en el que la asociación entre el EN y el EI se establece. La fuerza de la respuesta condicionada aumenta gradualmente con las repeticiones.
+* **Extinción:** La disminución o desaparición de la respuesta condicionada. Ocurre cuando el EC se presenta repetidamente sin el EI. Si la campana suena muchas veces sin que aparezca la comida, el perro dejará de salivar ante la campana.
+* **Recuperación Espontánea:** La reaparición de una respuesta condicionada extinguida después de un período de descanso. Un perro que dejó de salivar ante la campana podría volver a hacerlo si la escucha de nuevo días después.
+* **Generalización de Estímulos:** La tendencia a responder de manera similar a estímulos que son parecidos al estímulo condicionado original. Un perro condicionado a salivar con una campana de un tono específico podría también salivar ante campanas de tonos similares.
+* **Discriminación de Estímulos:** El proceso opuesto a la generalización. Se aprende a responder solo al estímulo condicionado original y no a estímulos similares. El perro aprendería a salivar solo con el tono exacto de la campana que se usó en el condicionamiento.
+
+
