--- a/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/3.md
+++ b/src/app/aprendizaje/CursoPrincipiosBasicosDelAprendizaje/3.md
@@ -1,24 +1,16 @@
-## Objetivos del Curso
-- Comprender los principios básicos del aprendizaje desde una perspectiva conductual.
-- Aplicar el análisis funcional a diferentes escenarios clínicos.
-- Diferenciar entre los diversos enfoques conductuales en la práctica psicológica.
+## Lección 3: Aplicaciones y Fenómenos Avanzados del Conductismo
 
-Este curso proporciona una base sólida para el estudio de la conducta y su aplicación en el ámbito clínico, favoreciendo el desarrollo de habilidades para el análisis y modificación del comportamiento.
+Esta lección explora conceptos más complejos y aplicaciones prácticas del conductismo, demostrando su relevancia en la modificación de la conducta.
 
+### Fenómenos Adicionales del Condicionamiento Operante
 
-### Unidad 1: Fundamentos del Aprendizaje y Conductismo
-- Definición y principios básicos del conductismo.
-- Diferencias entre aprendizaje clásico y operante.
-- Introducción al análisis funcional de la conducta.
+* **Moldeamiento (Shaping):** Una técnica para enseñar conductas complejas que no ocurren naturalmente. Implica reforzar **aproximaciones sucesivas** a la conducta deseada. Por ejemplo, para enseñar a un perro a tocar una campana, primero se le refuerza por mirar la campana, luego por acercarse, luego por tocarla con la nariz, y finalmente solo por tocarla con la pata.
+* **Encadenamiento (Chaining):** Se usa para enseñar una secuencia de comportamientos. Se refuerza cada paso de la secuencia una vez que el paso anterior ha sido completado. Por ejemplo, enseñar a un niño a lavarse las manos, reforzando cada acción (abrir el grifo, mojar las manos, usar jabón, etc.).
 
-### Unidad 2: Análisis Funcional del Comportamiento
-- Concepto de refuerzo y castigo.
-- El papel del lenguaje en la modificación de la conducta.
-- Aplicaciones clínicas del análisis funcional.
+### Terapia y Modificación de la Conducta
 
-### Unidad 3: Aplicaciones Prácticas y Casos de Estudio
-- Estrategias de intervención basadas en el aprendizaje.
-- Evaluación de casos prácticos.
-- Comparación entre diferentes enfoques conductuales.
+El conductismo ha dado lugar a numerosas técnicas de modificación de la conducta, usadas en la terapia clínica y en la educación.
 
-# Quiz
+* **Análisis de Conducta Aplicado (ABA):** Un enfoque científico para mejorar comportamientos socialmente significativos. Ampliamente utilizado para enseñar habilidades a individuos con autismo. El ABA usa principios de reforzamiento para aumentar las conductas deseadas y disminuir las no deseadas.
+* **Desensibilización Sistemática:** Una terapia conductual para tratar fobias. El individuo es expuesto gradualmente al estímulo que le causa miedo, mientras se le enseña a relajarse. La meta es reemplazar la respuesta de miedo por una de relajación.
+* **Terapia Aversiva:** Un método que asocia un estímulo aversivo con una conducta no deseada, como fumar o beber. Por ejemplo, un medicamento que causa náuseas se asocia con el consumo de alcohol, creando una aversión al alcohol.
